# comfyui-photoshop

./: __init__.py  pyproject.toml
Install_Plugin/: 3e6d64e0_PS.ccx
Install_Plugin/3e6d64e0/: animation.js  backend.js  connection.js  front.js  index.html  manifest.json  start.js  style.css
Install_Plugin/mbg/: 3e6d64e0_PS.ccx
data/PreviewFiles/: version.json
data/ps_inputs/: config.json
js/: connection.js  nodestyle.js
py/: Backend.py  nodePlugin.py
