[project]
name = "comfyui-photoshop"
description = "🔹 Powerfull bridge to Photoshop by NimaNzrii"
version = "1.6.6"
license = "LICENSE"
dependencies = [""]

[project.urls]
Repository = "https://github.com/ipiv/comfyui-photoshop"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ipiv"
DisplayName = "comfyui-photoshop"
Icon = ""